# Farthestsampling

./: Align.h  CMakeLists.txt  Heap.h  README.md  graph.cpp  install.sh  install_OpenMesh.sh  main.cpp  sampling_code.vcxproj
scr/: graph.h
src/: Align.cpp  main.cpp  sampling_code.sln  sampling_code.vcxproj.filters
